# ann1vn

./: CMakeLists.txt  README.md  ReadmeAnnWS  package.xml
nav1/: nav1_cmd.corpus  tiago_voice_nav1.launch
nodes/: ann_recognizer.py  features.py  mlptester1.py  record1.py  sigproc.py  voice_cmd_vel.py
nodes/network/: command_mlp.npy
